--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -17,5 +17,13 @@
         android:drawableLeft="@drawable/student"
         android:text="Master Mahasiswa"
         android:id="@+id/inputMahasiswa"></Button>
-
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_columnWeight="1"
+        android:background="@android:color/transparent"
+        android:drawableRight="@drawable/img_dollar_128"
+        android:textColor="#fff"
+        android:text="Forex"
+        android:id="@+id/tampilForexButton"></Button>
 </GridLayout>
